# warmup-project-sprinklr

./: CLAUDE.md  Jenkinsfile  bs.md
backend/: Dockerfile  alembic.ini  order-service.md  pyproject.toml
backend/app/: deps.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 07d8ef4195b0_init.py  895253eb6576_initial_schema_with_outbox.py  a1b2c3d4e5f6_add_trace_context_to_outbox.py
backend/app/api/: main.py
backend/app/api/routes/: order.py
backend/app/clients/: __init__.py  user_client.py
backend/app/consumers/: __init__.py  user_consumer.py
backend/app/core/: config.py  db.py  kafka.py  logging.py  metrics.py  redis.py  tracing.py
backend/app/core/metrics/: metrics.py
backend/app/events/: __init__.py  base.py  order_events.py  user_events.py
backend/app/middleware/: logging_middleware.py  metrics_middleware.py  tracing_middleware.py
backend/app/processors/: __init__.py  order_processor.py
backend/app/producers/: user_producer_mock.py
backend/app/services/: __init__.py  outbox_service.py  user_service.py
backend/app/workers/: outbox_worker.py
backend/httpie/: create_order  read_orders
backend/tests/: test_health_endpoints.py
docs/: jenkins-setup.md  logging-deployment.md  logging-runbook.md
jenkins/: README.md
load-tests/: README.md  order-service-load-test.js  quick-test.sh
terraform/: .gitignore  README.md  TODO.md  daym.md  filebeat-setup.tf  filebeat.tf  kibana-saved-searches.tf  logging-variables.tf  logging.tf  main.tf  monitoring-values.yaml  monitoring-variables.tf  monitoring.tf  outputs.tf  (+5 more)
(+8 files in other folders)
