[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "aiokafka>=0.13.0",
    "alembic>=1.18.1",
    "fastapi[standard]>=0.128.0",
    "opentelemetry-api>=1.39.1",
    "orjson>=3.11.7",
    "prometheus-client>=0.24.1",
    "psycopg[binary]>=3.3.2",
    "redis>=7.1.0",
    "sqlmodel>=0.0.31",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
